# backend

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  setup.cfg
.github/workflows/: ci-branches.yaml  ci-master.yaml
backend/: __init__.py  app.py
backend/settings/: __init__.py  local.py
backend/user/: __init__.py  models.py  schema.py  views.py
backend/workspace/: __init__.py  schema.py  views.py
deploy/: orthanc.json
migrations/versions/: e594127b4766_.py
tests/: conftest.py  docker-compose.yml  test_orthanc.py  test_user.py
